* decoders:
  - ffmpeg: added support for the tags comment, genre, year
  - wavpack: pass NULL if the .wvc file fails to open
  - mikmod: call MikMod_Exit() only in the finish() method
* audio outputs:
  - jack: allocate ring buffers before connecting
  - jack: clear "shutdown" flag on reconnect
  - jack: reduced sleep time to 1ms
* mapper: remove trailing slashes from music_directory


ver 0.14.1 (2009/01/17)
* decoders:
  - mp4: support the writer/composer tag
  - id3: strip leading and trailing whitespace from ID3 tags
  - oggvorbis: fix tremor support
  - oggvorbis: disable seeking on remote files
* audio outputs:
  - jack: allocate default port names (fixes a crash)
* update:
  - refresh stats after update
  - save the database even if it is empty
* input_curl:
  - use select() to eliminate busy loop during connect
  - honour http_proxy_* config directives
  - fix assertion failure on "connection refused"
  - fix assertion failure with empty HTTP responses
* corrected the sample calculation in the fallback resampler
* log: automatically append newline
* fix setenv() conflict on Solaris
* configure.ac: check for pkg-config before using it
* fix minor memory leak in decoder_tag()
* fix cross-fading bug: it used to play some chunks of the new song twice
* playlist
  - fix assertion failure during playlist load
  - implement Fisher-Yates shuffle properly
  - safely search the playlist for deleted song
* use custom PRNG for volume dithering (speedup)
* detect libid3tag without pkg-config


ver 0.14 (2008/12/25)
* audio outputs:
  - wait 10 seconds before reopening a failed device
  - fifo: new plugin
  - null: new plugin
  - shout: block while trying to connect instead of failing
  - shout: new timeout parameter
  - shout: support mp3 encoding and the shoutcast protocol
  - shout: send silence during pause, so clients don't get disconnected
* decoders:
  - ffmpeg: new plugin
  - wavpack: new plugin
  - aac: stream support added