@@ -8,6 +8,7 @@ ver 0.14.2 (2009/??/??)
   - jack: clear "shutdown" flag on reconnect
   - jack: reduced sleep time to 1ms
 * mapper: remove trailing slashes from music_directory
+* player: set player error when output device fails
 
 
 ver 0.14.1 (2009/01/17)
